# ComfyUI-ImageLabel_extended

./: README.md  font_manager.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
nodes/: __init__.py  add_label_to_image-original.py  add_label_to_image-v1.5.py  add_label_to_image-v1.6.py  add_label_to_image-v2.py
